<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/productItemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/productos"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cantidadItemText"
        android:text="@string/cantidadPlain"
        android:layout_margin="8dp"
        app:layout_constraintStart_toEndOf="@id/productItemText"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/prizeTotalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/cantidad"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tipoItemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/tipo"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productItemText" />
    <TextView
        android:id="@+id/tiporesultText"
        android:text="@string/tipo"
        app:layout_constraintStart_toEndOf="@id/tipoItemText"
        app:layout_constraintTop_toBottomOf="@id/productItemText"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/colonSignText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:textSize="20sp"
        android:text="@string/colonSign"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/prizeTotalText"
        app:layout_constraintBaseline_toBaselineOf="@id/prizeTotalText"/>
</android.support.constraint.ConstraintLayout>