<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="266dp" />

    <ListView
        android:id="@+id/listProducts"
        android:layout_width="339dp"
        android:layout_height="268dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/productText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/productos"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/productSpinner"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/prizeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/precio"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/precioEntry"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Cantidadtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/cantidad"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/cantidadEntry"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/productSpinner"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:entries="@array/productoslist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/precioEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productSpinner" />

    <EditText
        android:id="@+id/cantidadEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/Cantidadtext"
        app:layout_constraintTop_toBottomOf="@+id/precioEntry" />

    <TextView
        android:id="@+id/tipoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/tipo"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tipoSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Cantidadtext" />

    <Spinner
        android:id="@+id/tipoSpinner"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:entries="@array/tipoList"
        app:layout_constraintEnd_toEndOf="@id/cantidadEntry"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cantidadEntry" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="AddProduct"
        android:text="@string/agregar"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="OpenResultActivity"
        android:text="@string/calcular"
        app:layout_constraintBaseline_toBaselineOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>